<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.2.2</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>danieldjgomes</groupId>
	<artifactId>larica</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>larica</name>
	<description>Sistema de restaurante</description>
	<properties>
		<!-- Versões das dependencias -->
		<java.version>17</java.version>
		<postgresql.version>42.7.3</postgresql.version>
		<mapstruct.version>1.5.5.Final</mapstruct.version>
		<lombok.version>1.18.32</lombok.version>
		<keycloak.version>25.0.1</keycloak.version>
		<sonar.version>4.0.0.4121</sonar.version>
		<maven.version>3.8.0</maven.version>
		<lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
		<jacoco.version>0.8.12</jacoco.version>
		<!-- Porcentagem de cobertura dos testes JACOCO-->
		<jacoco.coverage.ratio>0.3</jacoco.coverage.ratio>
		<!-- SonarCloud config -->
		<sonar.projectKey>Firmastech_firmas-food</sonar.projectKey>
		<sonar.organization>firmastech</sonar.organization>
		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
		<sonar.token>${env.SONAR_TOKEN}</sonar.token>
		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
		<sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
		<!-- Sonar Ignore -->
		<sonar.coverage.exclusions>
			**/danieldjgomes/larica/app/adapter/database/pedidos/model/**
			**/danieldjgomes/larica/app/adapter/database/pedidos/repository/**
			**/danieldjgomes/larica/app/usecase/pedido/config/**
			**/danieldjgomes/larica/app/usecase/pedido/enums/**
			**/danieldjgomes/larica/app/usecase/pedido/port/**
			**/danieldjgomes/larica/app/usecase/pedido/request/**
			**/danieldjgomes/larica/app/usecase/pedido/response/**
			**/danieldjgomes/larica/app/usecase/pedido/validation/**
			**/danieldjgomes/larica/app/util/**
			**/core/cardapio/entity/**
			**/core/culinaria/entity/**
			**/core/endereco/entity/**
			**/core/prato/entity/**
			**/core/restaurante/entity/**
			**/dataprovider/repository/entity**
			**/dataprovider/repository/RestauranteDao*
			**/dataprovider/repository/RestauranteMapper*
			**/infrastructure/**
			**/danieldjgomes/larica/app/LaricaApplication*
			**/core/**
		</sonar.coverage.exclusions>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-oauth2-client</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-docker-compose</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>${postgresql.version}</version>
        </dependency>
		<dependency>
			<groupId>org.modelmapper</groupId>
			<artifactId>modelmapper</artifactId>
			<version>3.1.1</version>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>
        <dependency>
            <groupId>org.mapstruct</groupId>
            <artifactId>mapstruct</artifactId>
            <version>${mapstruct.version}</version>
        </dependency>
        <dependency>
            <groupId>org.keycloak</groupId>
            <artifactId>keycloak-admin-client</artifactId>
            <version>${keycloak.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-starter-openfeign</artifactId>
            <version>4.1.3</version>
        </dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>5.10.2</version>
			<scope>test</scope>
		</dependency>
    </dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.sonarsource.scanner.maven</groupId>
				<artifactId>sonar-maven-plugin</artifactId>
				<version>${sonar.version}</version>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>${jacoco.version}</version>
				<configuration>
					<excludes>
						<exclude>**/danieldjgomes/larica/app/adapter/database/pedidos/model/**</exclude>
						<exclude>**/danieldjgomes/larica/app/adapter/database/pedidos/repository/**</exclude>
						<exclude>**/danieldjgomes/larica/app/usecase/pedido/enums/**</exclude>
						<exclude>**/danieldjgomes/larica/app/usecase/pedido/port/**</exclude>
						<exclude>**/danieldjgomes/larica/app/usecase/pedido/request/**</exclude>
						<exclude>**/danieldjgomes/larica/app/usecase/pedido/config/**</exclude>
						<exclude>**/danieldjgomes/larica/app/usecase/pedido/response/**</exclude>
						<exclude>**/danieldjgomes/larica/app/usecase/pedido/validation/**</exclude>
						<exclude>**/core/cardapio/entity/**</exclude>
						<exclude>**/core/culinaria/entity/**</exclude>
						<exclude>**/core/endereco/entity/**</exclude>
						<exclude>**/core/prato/entity/**</exclude>
						<exclude>**/core/restaurante/entity/**</exclude>
						<exclude>**/dataprovider/repository/entity/**</exclude>
						<exclude>**/dataprovider/repository/RestauranteDao*</exclude>
						<exclude>**/dataprovider/repository/RestauranteMapper*</exclude>
						<exclude>**/infrastructure/**</exclude>
						<exclude>**/danieldjgomes/larica/app/LaricaApplication*</exclude>
						<exclude>**/core/**</exclude>
						<exclude>**/danieldjgomes/larica/app/util/**</exclude>
					</excludes>
				</configuration>
				<executions>
					<execution>
						<id>pre-test</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report-verify</id>
						<phase>verify</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
					<execution>
						<id>post-test</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
						<configuration>
							<dataFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</dataFile>
							<outputDirectory>${project.build.directory}/coverage-reports</outputDirectory>
						</configuration>
					</execution>
					<execution>
						<id>check</id>
						<goals>
							<goal>check</goal>
						</goals>
						<configuration>
							<rules>
								<rule>
									<element>BUNDLE</element>
									<limits>
										<limit>
											<counter>LINE</counter>
											<value>COVEREDRATIO</value>
											<minimum>${jacoco.coverage.ratio}</minimum>
										</limit>
									</limits>
								</rule>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven.version}</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<parameters>true</parameters>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>${lombok.version}</version>
						</path>
						<!-- This is needed when using Lombok 1.18.16 and above -->
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok-mapstruct-binding</artifactId>
							<version>${lombok-mapstruct-binding.version}</version>
						</path>
						<!-- Mapstruct should follow the lombok path(s) -->
						<path>
							<groupId>org.mapstruct</groupId>
							<artifactId>mapstruct-processor</artifactId>
							<version>${mapstruct.version}</version>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>